# soprano

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README  package.xml.in  qiproject.xml
backends/: CMakeLists.txt
backends/redland/: CMakeLists.txt  redlandbackend.cpp  redlandbackend.h  redlandmodel.cpp  redlandmodel.h  redlandnodeiteratorbackend.cpp  redlandstatementiterator.cpp
cmake/modules/: FindRaptor2.cmake
parsers/: CMakeLists.txt
parsers/nquads/: CMakeLists.txt
parsers/raptor/: CMakeLists.txt
queryparsers/rasqal/: CMakeLists.txt
serializers/: CMakeLists.txt
serializers/nquads/: CMakeLists.txt
serializers/raptor/: CMakeLists.txt
server/: servercore.cpp
soprano/: CMakeLists.txt  backend.h  datetime.cpp  error.cpp  error.h  filtermodel.cpp  filtermodel.h  global.cpp  global.h  languagetag.cpp  literalvalue.cpp  model.h  node.cpp  nrlmodel.cpp  pluginmanager.cpp  pluginstub.cpp  soprano.h  sopranodirs.cpp  sopranopluginfile.cpp  statement.cpp  statement.h  version.h  vocabulary.h
soprano/inference/: inferencemodel.cpp  inferencemodel.h  inferencerule.cpp  inferencerule.h  inferenceruleparser.cpp  inferenceruleparser.h  inferenceruleset.cpp  statementpattern.cpp
soprano/util/: asyncmodel.cpp  asyncmodel.h  asyncresult.h  dummymodel.h  mutexmodel.h  simplestatementiterator.h
soprano/vocabulary/: nao.h  nrl.h  rdf.cpp  rdf.h  rdfs.h  xesam.h  xsd.h
test/: CMakeLists.txt  SopranoModelTest.cpp  graphtest.cpp  serveroperatortest.cpp
